--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Productly</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     
+    <h1 class="main-title">
+        Hello 
+    </h1>
+    <i class="fas fa-mouse-pointer"></i>
+    <h2 class="section-title">
+        Hello World!
+    </h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti placeat nesciunt, illo odio magni ut, assumenda facilis odit hic quasi sequi omnis nobis nemo corporis sint beatae similique esse officia. Hic molestiae incidunt distinctio laborum aliquam voluptate accusamus atque consequuntur assumenda quibusdam, quisquam sapiente. Ea similique cum veritatis impedit itaque?
+    </p>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/all.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
