added adaptive for all screens

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
                 <a href="index.html" class="logo">
                     <img src="img/logo.svg" alt="Productly" class="logo__img">
                 </a>
+                <div class="main-header__button-menu"></div>
                 <div class="main-header__navigation">
                     <nav class="menu">
                         <ul class="menu__list">
@@ -51,11 +52,13 @@
         </div>
     </header>
 
+
+    <main> 
     <section class="offer">
         <div class="container">
             <div class="offer__row">
                 <div class="offer__text">
-                    <h1 class="main-title">
+                    <h1 class="offer__title">
                         The Design Thinking superpowers
                     </h1>
                     <p class="offer__descr">
@@ -89,9 +92,9 @@
                         <div class="feature__item-title">
                             First click tests
                         </div>
-                        <div class="feature__item-descr">
+                        <p class="feature__item-descr">
                             While most people enjoy casino gambling,
-                        </div>
+                        </p>
                     </div>
                     <div class="feature__item">
                         <div class="feature__item-icon feature__item-icon--stumbleupon">
@@ -100,9 +103,9 @@
                         <div class="feature__item-title">
                             Design surveys
                         </div>
-                        <div class="feature__item-descr">
+                        <p class="feature__item-descr">
                             Sports betting, lottery and bingo playing for the fun
-                        </div>
+                        </p>
                     </div>
                     <div class="feature__item">
                         <div class="feature__item-icon feature__item-icon--heart">
@@ -111,9 +114,9 @@
                         <div class="feature__item-title">
                             Preference tests
                         </div>
-                        <div class="feature__item-descr">
+                        <p class="feature__item-descr">
                             The Myspace page defines the individual.
-                        </div>
+                        </p>
                     </div>
                     <div class="feature__item">
                         <div class="feature__item-icon feature__item-icon--hourglass">
@@ -122,9 +125,9 @@
                         <div class="feature__item-title">
                             Five second tests
                         </div>
-                        <div class="feature__item-descr">
+                        <p class="feature__item-descr">
                             Personal choices and the overall personality of the person. 
-                        </div>
+                        </p>
                     </div>
                 </div>
                 <button class="btn feature__btn">
@@ -277,7 +280,7 @@
                             I can help marketing strategy
                         </span>
                     </li>
-                    <li class="expert__item">
+                    <li class="expert__item expert__item--left">
                         <img src="img/expert-3.png" alt="" class="expert__item-icon">
                         <span class="expert__item-message">
                             I can design you website
@@ -289,7 +292,7 @@
                             I will define the profile of your users
                         </span>
                     </li>
-                    <li class="expert__item">
+                    <li class="expert__item expert__item--left">
                         <img src="img/expert-5.png" alt="" class="expert__item-icon">
                         <span class="expert__item-message">
                             I can prototype your app
@@ -322,42 +325,48 @@
             </p>
             <div class="marketing__slider">
                 <div class="marketing__slider-item">
-                    <a href="#" class="marketing__slider-link">
-                        <img src="img/marketing-1.png" alt="1" class="marketing__slider-img">
-                    </a>
-                    <span class="marketing__info">
-                        By <a href="#" class="marketing__info-link">Abdullah</a> |  03 March 2019
-                    </span>
-                    <a href="#" class="marketing__slider-title">
-                        Increasing Prosperity With Positive Thinking
-                    </a>
+                    <div class="marketing__slider-content">
+                        <a href="#" class="marketing__slider-link">
+                            <img src="img/marketing-1.png" alt="1" class="marketing__slider-img">
+                        </a>
+                        <span class="marketing__info">
+                            By <a href="#" class="marketing__info-link">Abdullah</a> |  03 March 2019
+                        </span>
+                        <a href="#" class="marketing__slider-title">
+                            Increasing Prosperity With Positive Thinking
+                        </a>
+                    </div>
                 </div>
                 <div class="marketing__slider-item">
-                    <a href="#" class="marketing__slider-link">
-                        <img src="img/marketing-2.png" alt="1" class="marketing__slider-img">
-                    </a>
-                    <span class="marketing__info">
-                        By <a href="#" class="marketing__info-link">Abdullah</a> |  03 March 2019
-                    </span>
-                    <a href="#" class="marketing__slider-title">
-                        Increasing Prosperity With Positive Thinking
-                    </a>
+                    <div class="marketing__slider-content">
+                        <a href="#" class="marketing__slider-link">
+                            <img src="img/marketing-2.png" alt="1" class="marketing__slider-img">
+                        </a>
+                        <span class="marketing__info">
+                            By <a href="#" class="marketing__info-link">Abdullah</a> |  03 March 2019
+                        </span>
+                        <a href="#" class="marketing__slider-title">
+                            Increasing Prosperity With Positive Thinking
+                        </a>
+                    </div>
                 </div>
                 <div class="marketing__slider-item">
-                    <a href="#" class="marketing__slider-link">
-                        <img src="img/marketing-3.png" alt="1" class="marketing__slider-img">
-                    </a>
-                    <span class="marketing__info">
-                        By <a href="#" class="marketing__info-link">Abdullah</a> |  03 March 2019
-                    </span>
-                    <a href="#" class="marketing__slider-title">
-                        Increasing Prosperity With Positive Thinking
-                    </a>
+                    <div class="marketing__slider-content">
+                        <a href="#" class="marketing__slider-link">
+                            <img src="img/marketing-3.png" alt="1" class="marketing__slider-img">
+                        </a>
+                        <span class="marketing__info">
+                            By <a href="#" class="marketing__info-link">Abdullah</a> |  03 March 2019
+                        </span>
+                        <a href="#" class="marketing__slider-title">
+                            Increasing Prosperity With Positive Thinking
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
+    </main>
     <footer class="main-footer">
         <div class="container">
             <div class="main-footer__inner">
